--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "types": ["node"],
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*"],
+  "include": ["./**/*.ts", "./**/*.js"],
   "exclude": ["node_modules", "dist"]
 }
