--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ES2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "noImplicitAny": false,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./"]
     },
     "types": ["node", "express", "multer"],
     "typeRoots": ["./node_modules/@types", "./types"]
