--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch server.ts",
-    "build": "tsc",
+    "clean": "rimraf dist",
+    "build": "npm run clean && node build.js",
     "upload:favicon": "tsx scripts/uploadFavicon.ts",
     "start": "node dist/server.js",
     "db:push": "prisma db push",
     "db:refresh": "npx prisma generate && npx prisma db push",
     "generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
@@ -62,6 +63,7 @@
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
     "prisma": "^6.5.0",
+    "rimraf": "^6.0.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
