--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,19 @@
       "@/*": ["./"]
     },
     "types": ["node", "express", "multer"],
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "moduleDetection": "force"
   },
-  "include": ["./**/*.ts", "./**/*.js"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*",
+    "lib/**/*",
+    "*.ts",
+    "*.js"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
