--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ JWT_EXPIRY=7d
 REFRESH_TOKEN_EXPIRY=30d
 BCRYPT_SALT_ROUNDS=12
 
+
 # CORS Configuration
 CORS_ORIGIN="http://localhost:5173,https://tijara-frontend.vercel.app"
 
@@ -24,12 +25,12 @@ CLOUDFLARE_R2_PUBLIC_URL=https://pub-8286d937dc154304815f9bb5a41c5c64.r2.dev
 # Email Service
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-specific-password
+SMTP_USER=
+SMTP_PASS=
 EMAIL_FROM=noreply@bestwebsite.com
 
 # File Upload
-MAX_FILE_SIZE=5242880 # 5MB in bytes
+MAX_FILE_SIZE=5242880
 UPLOAD_DIR=uploads
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
 
@@ -38,8 +39,8 @@ RATE_LIMIT_WINDOW=15m
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
-LOG_LEVEL=debug
-LOG_FORMAT=dev
+LOG_LEVEL=info
+LOG_FORMAT=combined
 
 # External Services
 SENTRY_DSN=
@@ -50,5 +51,5 @@ ENABLE_EMAIL_VERIFICATION=false
 ENABLE_2FA=false
 
 # Frontend URLs
-FRONTEND_URL="http://localhost:5173"
+FRONTEND_URL="https://tijara-frontend-production.up.railway.app"
 PRODUCTION_FRONTEND_URL="https://tijara-frontend-production.up.railway.app"
