--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
@@ -18,18 +18,9 @@
     },
     "types": ["node", "express", "multer"],
     "typeRoots": ["./node_modules/@types", "./types"],
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*",
-    "lib/**/*",
-    "*.ts",
-    "*.js"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ]
+  "include": ["src/**/*", "lib/**/*", "*.ts", "*.js"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
