--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ cypress/screenshots/
 # ========================================
 # 🔒 Environment Variables (Never commit!)
 # ========================================
+.env
 
 
 # ========================================
